force-app/main/default/objects/Equipo_Oferta__c/fields/Mercantil__c.field-meta.xml
<CustomField>
    <fullName>Mercantil__c</fullName>
    <label>Mercantil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0002 - AYESA ENGINEERING S.A</fullName>
            </value>
            <value>
                <fullName>0003 - AYESA ING. Y ARQU., S.A.</fullName>
            </value>
            <value>
                <fullName>0004 - ALIA GESTION S.L.</fullName>
            </value>
            <value>
                <fullName>0005 - AYNOVA, S.A.U.</fullName>
            </value>
            <value>
                <fullName>0007 - ACT SISTEMAS, S.L.U.</fullName>
            </value>
            <value>
                <fullName>0012 - AYESA MDE, S.A.</fullName>
            </value>
            <value>
                <fullName>0018 - AYESA AIR CONTROL S.L.</fullName>
            </value>
            <value>
                <fullName>0021 - AYESA MEXICO,S.A. de C.V.</fullName>
            </value>
            <value>
                <fullName>0023 - AYESA SUCURSAL POLONIA</fullName>
            </value>
            <value>
                <fullName>0024 - AYESA POLSKA SP. Z O.O.</fullName>
            </value>
            <value>
                <fullName>0025 - AYESA MAROC, S.A.R.L</fullName>
            </value>
            <value>
                <fullName>0027 - AYESA IMPLEMEN. TECN. S.A</fullName>
            </value>
            <value>
                <fullName>0030 - AYESA ALGERIE S.A.R.L.</fullName>
            </value>
            <value>
                <fullName>0034 - AYESA SERVICIOS S RL DECV</fullName>
            </value>
            <value>
                <fullName>0035 - ALIA WORLDWIDE, S.L.</fullName>
            </value>
            <value>
                <fullName>0036 - AYESA BRANCH OFFICE</fullName>
            </value>
            <value>
                <fullName>0040 - AYESA ENGINYERIA SERVEIS</fullName>
            </value>
            <value>
                <fullName>0045 - ATECH ADVAN. SOL.</fullName>
            </value>
            <value>
                <fullName>0047 - ATECH BPO, S.L.</fullName>
            </value>
            <value>
                <fullName>0048 - UNITEC</fullName>
            </value>
            <value>
                <fullName>0049 - INSOTECH INTERNATIONAL</fullName>
            </value>
            <value>
                <fullName>0050 - AYESA PERÚ</fullName>
            </value>
            <value>
                <fullName>0053 - AYESA INDIA PRIVATE LIMIT</fullName>
            </value>
            <value>
                <fullName>0054 - AYESA COLOMBIA SAS</fullName>
            </value>
            <value>
                <fullName>0056 - AYESA PANAMÁ</fullName>
            </value>
            <value>
                <fullName>0057 - AAT PANAMÁ RUC</fullName>
            </value>
            <value>
                <fullName>0058 - AYESA PANAMÁ RUC</fullName>
            </value>
            <value>
                <fullName>0059 - AYESA COLOMBIA SUCURSAL</fullName>
            </value>
            <value>
                <fullName>0060 - AAT ECUADOR</fullName>
            </value>
            <value>
                <fullName>0061 - AYESA ECUADOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>