force-app/main/default/objects/Equipo_Oferta__c/fields/Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Objetivo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objetivo</label>
    <referenceTo>Objetivo__c</referenceTo>
    <relationshipLabel>Equipos Oferta</relationshipLabel>
    <relationshipName>Equipos_Oferta</relationshipName>
    <type>Lookup</type>
</CustomField>